# ND-HFTT

./: .gitignore  LICENSE  README.md  test.py  visualize.ps1
.github/: FUNDING.yml
2025_spring/group3_project/: HLStradingsystm.ipynb
2025_spring/group5_project/src/statement_downloader/: CMakeLists.txt
2025_spring/group7_project/: README.md  optuna_optimizer.py  pair_selector.py  requirements.txt  stat_arb_strat.py
Assignments/Assignment1/: Assignment_1_MLP_Regressor.ipynb
HW0/: AntonioKaram.txt  dannybotek.txt  walkerbagley.txt
backtest/: backtest.py
group-2/: README.md
group-2/code/: arb_binance_coinbase.py  binance_coinbase_arb.py
group1_project/forex/: .clang-format  README.md  requirements.txt
group2_project/code/: kraken-trading.py
group3_project/: README.md  TODO.md
group3_project/scripts/: download_fomc_reports.py  fix_target_rates_dates.py
group3_project/src/: utils.cpp
group4_project/ptp/: ptp_log_analysis.ipynb
group5_project/: exchanges.csv
hft_project/: data_loader.py  main.py
output/: cross_asset_confirmation.csv  order_book_imbalance.csv  signals2022-.csv  surprise_signals.csv
project-team1/: LICENSE  README
scripts/: combine_target_rates.py  first_strategy.py  format_daily_federal_funds_data.py  read_barchart_download.py  rename_market_ticks.py  sample_market_tickets.py
src/: CMakeLists.txt  Makefile
src/analyze_data/: effr_vs_movement.py  flucs_in_preds.py  plot_means_and_rates.py  read_fomc_statements.py  view_data.py
src/statement_downloader/src/: statement_downloader.cpp
src/statement_downloader/test/: test_statement_downloader.cpp
(+132 files in other folders)
